--- a/.github/workflows/integration-aws-nvidia-oss-cron.yaml
+++ b/.github/workflows/integration-aws-nvidia-oss-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-05-25T11:30:52Z by kres b5844f8.
+# Generated on 2024-05-27T16:20:10Z by kres bcb280a.
 
 name: integration-aws-nvidia-oss-cron
 concurrency:
@@ -62,7 +62,7 @@ jobs:
         if: github.event_name != 'schedule'
         uses: actions/download-artifact@v4
         with:
-          name: artifacts
+          name: talos-artifacts
           path: _out
       - name: Fix artifact permissions
         if: github.event_name != 'schedule'
